# Wynncraft-wrapper

./: .gitignore  README.md  pyproject.toml
src/wynncraft-wrapper/: news.py
src/wynncraft_wrapper/: __init__.py  guild.py  item.py  leaderboard.py  player.py
wynncraft-wrapper/: main.py
