[project]
name = "Wynncraft wraper"
version = "0.0.1"
authors = [
  { name="Sebastian Rohalnd", email="author@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""